		<project>
	  <modelVersion>4.0.0</modelVersion>
	  <parent>
	    <groupId>org.sonatype.oss</groupId>
	    <artifactId>oss-parent</artifactId>
	    <version>7</version>
	    <relativePath></relativePath>
	  </parent>

	  <groupId>com.google.code.findbugs</groupId>
	  <artifactId>findbugs</artifactId>
	  <version>3.0.1-SNAPSHOT</version>
	  <packaging>jar</packaging>

	  <url>http://findbugs.sourceforge.net/</url>
	  <name>FindBugs-Project</name>
	  <description>Findbugs: Because it's easy!</description>
	  <inceptionYear>2003</inceptionYear>
	  <licenses>
	    <license>
	      <name>GNU Lesser Public License</name>
	      <url>http://www.gnu.org/licenses/lgpl.html</url>
	      <distribution>repo</distribution>
	    </license>
	  </licenses>

	  <prerequisites>
	    <maven>3.0</maven>
	  </prerequisites>


	  <scm>
	    <connection>scm:git:http://code.google.com/p/findbugs/</connection>
	    <developerConnection>scm:git:https://code.google.com/p/findbugs/</developerConnection>
	    <url>https://code.google.com/p/findbugs/</url>
	  </scm>

	  <developers>
	    <developer>
	      <id>bp</id>
	      <name>Bill Pugh</name>
	      <email>pugh at cs.umd.edu</email>
	      <url>http://www.cs.umd.edu/~pugh/</url>
	      <roles>
		<role>Project Lead</role>
		<role>Primary Developer</role>
	      </roles>
	      <timezone>-5</timezone>
	    </developer>
	    <developer>
	      <id>al</id>
	      <name>Andrey Loskutov</name>
	      <email>Loskutov@gmx.de</email>
	      <url>http://andrei.gmxhome.de/privat.html</url>
	      <roles>
		<role>Eclipse plugin</role>
	      </roles>
	      <timezone>+1</timezone>
	    </developer>
	    <developer>
	      <id>bp</id>
	      <name>Keith Lea</name>
	      <email></email>
	      <url>http://keithlea.com/</url>
	      <roles>
		<role>web cloud</role>
	      </roles>
	      <timezone>-5</timezone>
	    </developer>
	  </developers>
	  <contributors>
	    <contributor>
	      <name>Garvin LeClaire</name>
	      <email>gleclaire@codehaus.org</email>
	      <url>http://gdleclaire.blogspot.com</url>
	      <roles>
		<role>Maven</role>
	      </roles>
	      <timezone>-5</timezone>
	    </contributor>
	    <contributor>
	      <name>David H. Hovemeyer</name>
	      <email>dhovemey@ycp.edu</email>
	      <url>http://goose.ycp.edu/~dhovemey/</url>
	      <roles>
		<role>project founder</role>
	      </roles>
	      <timezone>-5</timezone>
	    </contributor>
	    <contributor>
	      <name>Nay Ayewah</name>
	      <email></email>
	      <url></url>
	      <roles>
		<role></role>
	      </roles>
	      <timezone>-5</timezone>
	    </contributor>
	    <contributor>
	      <name>Ben Langmead</name>
	      <email></email>
	      <url></url>
	      <roles>
		<role></role>
	      </roles>
	      <timezone>-5</timezone>
	    </contributor>
	    <contributor>
	      <name>Tomas Pollak</name>
	      <email></email>
	      <url></url>
	      <roles>
		<role>Eclipse plugin tests</role>
	      </roles>
	      <timezone>-5</timezone>
	    </contributor>
	    <contributor>
	      <name>Phil Crosby</name>
	      <email></email>
	      <url></url>
	      <roles>
		<role></role>
	      </roles>
	      <timezone>-5</timezone>
	    </contributor>
	    <contributor>
	      <name>Peter Friese</name>
	      <email></email>
	      <url></url>
	      <roles>
		<role>Eclipse plugin</role>
	      </roles>
	      <timezone>-5</timezone>
	    </contributor>
	    <contributor>
	      <name>Dave Brosius</name>
	      <email></email>
	      <url></url>
	      <roles>
		<role></role>
	      </roles>
	      <timezone>-5</timezone>
	    </contributor>
	    <contributor>
	      <name>Brian Goetz</name>
	      <email></email>
	      <url></url>
	      <roles>
		<role></role>
	      </roles>
	      <timezone>-5</timezone>
	    </contributor>
	    <contributor>
	      <name>Rohan Lloyd</name>
	      <email></email>
	      <url></url>
	      <roles>
		<role></role>
	      </roles>
	      <timezone>-5</timezone>
	    </contributor>
	    <contributor>
	      <name>Tagir Valeev</name>
	      <email></email>
	      <url></url>
	      <roles>
		<role></role>
	      </roles>
	      <timezone>+6</timezone>
	    </contributor>
	  </contributors>

	  <properties>
    <asmVersion>5.0.2</asmVersion>
    <junitVersion>4.11</junitVersion>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <!-- Sonar -->
    <sonar.sources>${basedir}/src/java</sonar.sources>
    <sonar.tests>${basedir}/src/junit</sonar.tests>

    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
    <jacoco.version>0.6.3.201306030806</jacoco.version>
    <sonar-jacoco-listeners.version>1.4</sonar-jacoco-listeners.version>
    <!-- Don't let Sonar execute tests. We will ask it to Maven
         sonar.dynamicAnalysis has been deprecated since v4.3
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
    -->
    <!-- The system property jacoco.outputDir needs to be override on the command line
         with an absolute path if you want to merge results from all modules.
         Example in a Jenkisn build where ${WORKSPACE} is defined and your project in the root directory of the workspace :
         mvn clean install -Prun-its,coverage -Djacoco.outputDir=${WORKSPACE}/target
         Note that unfortunately using the following does not work because of
         http://jira.codehaus.org/browse/SONAR-3427:
      <jacoco.outputDir>${basedir}/target/</jacoco.outputDir>
    -->
    <jacoco.outputDir>${basedir}/target</jacoco.outputDir>
    <jacoco.out.ut.file>jacoco-ut.exec</jacoco.out.ut.file>
    <jacoco.out.it.file>jacoco-it.exec</jacoco.out.it.file>
    <sonar.jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</sonar.jacoco.reportPath>
    <sonar.jacoco.itReportPath>${jacoco.outputDir}/${jacoco.out.it.file}</sonar.jacoco.itReportPath>
    <sonar.language>java</sonar.language>
  </properties>

  <dependencies>
    <dependency>
      <groupId>net.jcip</groupId>
      <artifactId>jcip-annotations</artifactId>
      <version>1.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
      <version>2.0.1</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>bcel-findbugs</artifactId>
      <version>6.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jFormatString</artifactId>
      <version>2.0.1</version>
    </dependency>
    <dependency>
      <groupId>dom4j</groupId>
      <artifactId>dom4j</artifactId>
      <version>1.6.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.ant</groupId>
      <artifactId>ant</artifactId>
      <version>1.7.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-debug-all</artifactId>
      <version>${asmVersion}</version>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-commons</artifactId>
      <version>${asmVersion}</version>
    </dependency>
    <dependency>
      <groupId>commons-lang</groupId>
      <artifactId>commons-lang</artifactId>
      <version>2.6</version>
    </dependency>
    <dependency>
      <groupId>com.apple</groupId>
      <artifactId>AppleJavaExtensions</artifactId>
      <version>1.4</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junitVersion}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>jaxen</groupId>
      <artifactId>jaxen</artifactId>
      <version>1.1.6</version>
      <exclusions>
        <exclusion>
          <artifactId>icu4j</artifactId>
          <groupId>com.ibm.icu</groupId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>
  <build>
    <sourceDirectory>${basedir}/src</sourceDirectory>
    <testSourceDirectory>${basedir}/src/junit</testSourceDirectory>
    <resources>
      <resource>
        <directory>${basedir}/etc</directory>
        <includes>
          <include>*.xsd</include>
          <include>bugrank.txt</include>
          <include>findbugs.xml</include>
          <include>messages*.xml</include>
        </includes>
      </resource>
      <resource>
        <directory>${basedir}/src/xsl</directory>
        <includes>
          <include>*.xsl</include>
        </includes>
      </resource>
      <resource>
        <directory>${basedir}/src/antTask</directory>
        <includes>
          <include>**/*.xsl</include>
          <include>**/*.properties</include>
          <include>**/*.db</include>
          <include>**/*.png</include>
          <include>**/*.html</include>
        </includes>
      </resource>
      <resource>
        <directory>${basedir}/src/antTask</directory>
        <includes>
          <include>**/*.xsl</include>
          <include>**/*.properties</include>
          <include>**/*.db</include>
          <include>**/*.png</include>
          <include>**/*.html</include>
        </includes>
      </resource>
      <resource>
        <directory>${basedir}/src/gui</directory>
        <includes>
          <include>**/*.xsl</include>
          <include>**/*.properties</include>
          <include>**/*.db</include>
          <include>**/*.png</include>
          <include>**/*.html</include>
        </includes>
      </resource>
      <resource>
        <directory>${basedir}/src/java</directory>
        <includes>
          <include>**/*.xsl</include>
          <include>**/*.properties</include>
          <include>**/*.db</include>
          <include>**/*.png</include>
          <include>**/*.html</include>
        </includes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.9.1</version>
        <configuration>
        <sourcepath>src/java</sourcepath>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.0</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
          <excludes>
            <exclude>**/junit/**</exclude>
            <exclude>**/infonodeJava/**</exclude>
            <exclude>**/obsolete/**</exclude>
          </excludes>
          <testExcludes>
            <exclude>**/architecture/**</exclude>
            <exclude>**/cloud/**</exclude>
            <!-- -->
            <exclude>**/DetectorsTest.java</exclude>
          </testExcludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <archive>
            <manifestFile>${basedir}/etc/MANIFEST-findbugs.MF</manifestFile>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>deploy</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.4</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>install</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>coverage</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <argLine>${jacoco.agent.ut.arg}</argLine>
              <!-- Specific to generate mapping between tests and covered code -->
              <properties>
                <property>
                  <name>listener</name>
                  <value>org.sonar.java.jacoco.JUnitListener</value>
                </property>
              </properties>
            </configuration>
          </plugin>
<!--
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-failsafe-plugin</artifactId>
            <configuration>
              <argLine>-Xmx1024m -XX:MaxPermSize=256m ${jacoco.agent.it.arg}</argLine>
              <properties>
                <property>
                  <name>listener</name>
                  <value>org.sonar.java.jacoco.JUnitListener</value>
                </property>
              </properties>
              <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
            </configuration>
          </plugin>
-->
          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>${jacoco.version}</version>
            <executions>
              <!-- Prepares a variable, jacoco.agent.ut.arg, that contains the info to be passed to the JVM hosting the code
being tested. -->
              <execution>
                <id>prepare-ut-agent</id>
                <phase>process-test-classes</phase>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
                <configuration>
                  <destFile>${sonar.jacoco.reportPath}</destFile>
                  <propertyName>jacoco.agent.ut.arg</propertyName>
                  <append>true</append>
                </configuration>
              </execution>
              <!-- Prepares a variable, jacoco.agent.it.arg, that contains the info to be passed to the JVM hosting the code
being tested. -->
              <execution>
                <id>prepare-it-agent</id>
                <phase>pre-integration-test</phase>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
                <configuration>
                  <destFile>${sonar.jacoco.itReportPath}</destFile>
                  <propertyName>jacoco.agent.it.arg</propertyName>
                  <append>true</append>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
      <dependencies>
        <dependency>
          <groupId>org.codehaus.sonar-plugins.java</groupId>
          <artifactId>sonar-jacoco-listeners</artifactId>
          <version>${sonar-jacoco-listeners.version}</version>
          <scope>test</scope>
        </dependency>
      </dependencies>
    </profile>
  </profiles>
</project>
